--- a/css/estilos.css
+++ b/css/estilos.css
@@ -155,7 +155,7 @@ h1:hover {
 
 /* Footer CSS */
 .footerpadre {
-    background-color: black;
+    background-color: #6c757d;
     padding: 10PX;
     margin: 10px;
     display: flex;
@@ -164,7 +164,7 @@ h1:hover {
     border-radius: 5px;
 }
 .footerderechos {
-    color: white;
+    color:  #ffc107;
     font-weight: bold;
     margin-bottom: 3px;
     font-size: 20px;
@@ -182,7 +182,7 @@ h1:hover {
     /* background-color: red; */
     width: 420px;
     height: 80%;
-    color: white;
+    color: #ffc107;
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -199,7 +199,7 @@ h1:hover {
     /* background-color: blue; */
     width: 420px;
     height: 80%;
-    color: white;
+    color:  #ffc107;
     display: inline-flex;
     align-items: center;
     justify-content: center;
