--- a/css/estilos.css
+++ b/css/estilos.css
@@ -134,13 +134,6 @@ h1:hover {
     font-weight: bolder;
     text-shadow:  rgb(153, 153, 153) 0.1em 0.1em 0.1em;
 }
-/* .pinicio h3 { 
-    font-style: oblique;
-    font-size: 30px;
-    text-align: center;
-    margin: 10px;
-    padding: 10px;
-} */
 .pinicio p {
     text-align: justify;
     font-family: 'Times New Roman', Times, serif;
@@ -165,6 +158,45 @@ h1:hover {
     height: auto;
     object-fit: cover;
 }
+
+.seccionpadre { 
+    /* background-color: gray; */
+    padding: 10PX;
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 5px;
+
+}
+.seccionpadre02 {
+    display: flex;
+    justify-content: center; /* alinea horizoltalmente */
+    align-items: center; /* alinea verticalmente */
+    flex-wrap: wrap;
+    gap: 20px;
+    border: 5px double #ffc107;
+    padding: 10px;
+}
+.seccionpadre02--entrev img {
+    width: 400px;
+    height: auto;
+    border-radius: 10px;
+    object-fit: cover;
+}
+.seccionpadre02--txtenlace h4 {
+    font-style: oblique;
+    color: #6c757d;
+    font-weight: bolder;
+    font-size: 25px;
+}
+.seccionpadre02--txtenlace a {
+    text-decoration: none;
+    color: #6c757d;
+    font-weight: bolder;
+    font-size: 20px;
+}
+
 
 
 /* Footer CSS */
@@ -344,9 +376,6 @@ footer .fa-whatsapp-square:hover{
     margin-left: 25px;
     margin-right: 25px;
 }
-/* .flush-headingOne {
-    background-color: #6c757d;
-} */
 
 .tit-equipo { 
     margin: 20px;
@@ -374,13 +403,6 @@ img {
     text-align: center;
     font-size: 30px;
 
-}
-.column {
-    flex: 25%;
-    padding: 5px;
-}
-column img { 
-    margin-top: 5px;
 }
 
 
@@ -475,35 +497,25 @@ main h2 {
     letter-spacing: 10px;
     word-spacing: 5px;
 }
-.grid-container { 
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-auto-rows: minmax(200px, auto);
-    gap:20px;
-    padding: 2px;
-    grid-auto-flow: dense;
-}
-.item1 { 
-    grid-column-start: 1;
-    grid-column-end: 3;
-}
-.item5 {
-    grid-column: 1 / span 3;
-}
 
-.grid-item { 
+img {
+    width: 100%;
+    margin-top: 5px;
+    border-radius: 10px;
+    /* object-fit: cover; */
+}
+.row {
     display: flex;
-    align-items: center;
-    justify-content: center;
-
-    background-color:gray;
-    border-radius: 1px solid rgb(255, 255,255);
+    padding: 5px;
+    flex-wrap: wrap;
 }
 
-.grid-item:hover{
-    filter: opacity(0.9);
-    transform: scale(1.04);
+.column {
+    flex: 25%;
+    padding: 5px;
 }
+
+
 
 
 
@@ -584,15 +596,166 @@ h1 {
     margin-left: 100px;
     margin-right: 100px;
 }
-.contenedor_ag h2{
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 230px);
+    gap: 20px;
+    justify-content: center;
+}
+.grid-item {
+    width: 230px;
+    height: 200px;
+    object-fit: cover;
+}
+.grid-item:hover{
+    filter: opacity(0.9);
+    transform: scale(1.04);
+}
+
+
+/* PAGINA DONATARIOS CSS */
+.contenedor_ag h2 {
     color: #ffc107;
     font-style: oblique;
     font-size: 70px;
     text-align: center;
     margin: 20px;
     font-weight: bolder;
-    text-shadow:  rgb(153, 153, 153) 0.1em 0.1em 0.2em;
+    text-shadow:  rgb(153, 153, 153) 0.1em 0.1em 0.1em;
 }
+.flex-padre {
+    /* background-color: aqua; */
+    padding: 20px;
+    margin: 10px;
+    display: block;
+}
+.flex-padre h3 {
+    color: #6c757d;
+    font-size: 50px;
+    border-bottom: 5px solid #ffc107;
+}
+.flex-container {
+    /* background-color: orange; */
+    padding: 20px;
+    margin: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    height: auto;
+    gap: 10px;/* distancia entre las cajitas */
+    flex-wrap: wrap;  /* para respetar o no el tamaño del item */
+}
+.flex-item img {
+    width: 100%;
+    border-radius: 5px; 
+}
+.flex-item img:hover{
+    filter: opacity(0.9);
+    transform: scale(1.3);
+}
+
+
+.flex-padre02 {
+    /* background-color: aqua; */
+    padding: 20px;
+    margin: 10px;
+    display: block;
+}
+.flex-padre02 h3 {
+    color: #6c757d;
+    font-size: 50px;
+    border-bottom: 5px solid #ffc107;
+}
+.flex-containerAli {
+    /* background-color: orange; */
+    padding: 20px;
+    margin: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    height: auto;
+    gap: 10px;/* distancia entre las cajitas */
+    flex-wrap: wrap;  /* para respetar o no el tamaño del item */
+}
+.flex-itemAli img {
+    width: 100%;
+    border-radius: 5px; 
+}
+.flex-itemAli img:hover{
+    filter: opacity(0.9);
+    transform: scale(1.3);
+}
+
+.flex-padre03 {
+    /* background-color: aqua; */
+    padding: 20px;
+    margin: 10px;
+    display: block;
+}
+.flex-padre03 h3 {
+    color: #6c757d;
+    font-size: 50px;
+    border-bottom: 5px solid #ffc107;
+}
+.flex-containerGob {
+    /* background-color: orange; */
+    padding: 20px;
+    margin: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    height: auto;
+    gap: 10px;/* distancia entre las cajitas */
+    flex-wrap: wrap;  /* para respetar o no el tamaño del item */
+}
+.flex-itemGob img {
+    width: 100%;
+    border-radius: 5px; 
+}
+.flex-itemGob img:hover{
+    filter: opacity(0.9);
+    transform: scale(1.3);
+}
+
+.flex-padre04 {
+    /* background-color: aqua; */
+    padding: 20px;
+    margin: 10px;
+    display: block;
+}
+.flex-padre04 h3 {
+    color: #6c757d;
+    font-size: 50px;
+    border-bottom: 5px solid #ffc107;
+}
+.flex-containerEsc {
+    /* background-color: orange; */
+    padding: 20px;
+    margin: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    height: auto;
+    gap: 10px;/* distancia entre las cajitas */
+    flex-wrap: wrap;  /* para respetar o no el tamaño del item */
+}
+.flex-itemEsc img {
+    width: 100%;
+    border-radius: 5px; 
+}
+.flex-itemEsc img:hover{
+    filter: opacity(0.9);
+    transform: scale(1.3);
+}
+.carousel {
+    margin-top: 100px;
+}
+
 
 /* PAGINA CONTACTO CSS */
 .padre-con {
